--- a/db/projects.json
+++ b/db/projects.json
@@ -4,6 +4,7 @@
     "name": "Smite Filter",
     "fileName": "smitefilter.png",
     "alt": "img-smitefilter",
+    "projectType": "Web",
     "description": "Filter of gods for the video game Smite using Javscript vanilla",
     "preview": ["https://francescoalterio.github.io/smitefilter/"],
     "repository": ["https://github.com/francescoalterio/smitefilter"],
@@ -15,6 +16,7 @@
     "name": "React Calculator",
     "fileName": "react-calculator.png",
     "alt": "img-react-calculator",
+    "projectType": "Web",
     "description": "Calculator developed with React.",
     "preview": ["https://react-calculator-fran.netlify.app"],
     "repository": ["https://github.com/francescoalterio/react-calculator"],
@@ -26,6 +28,7 @@
     "name": "Cryptocurrency List",
     "fileName": "crypto-list.png",
     "alt": "img-crypto-list",
+    "projectType": "Web",
     "description": "List of the most famous cryptocurrencies and their prices.",
     "preview": [
       "https://stackblitz.com/edit/cryptocurrencylist?file=fileName%2FApp.js"
@@ -41,6 +44,7 @@
     "name": "Money Converter",
     "fileName": "money-converter.png",
     "alt": "img-money-converter",
+    "projectType": "Web",
     "description": "Converter from one currency to another.",
     "preview": ["https://stackblitz.com/edit/react-e9kmsj?file=README.md"],
     "repository": ["https://github.com/francescoalterio/money-converter"],
@@ -52,6 +56,7 @@
     "name": "Quizz App",
     "fileName": "quizz-app.png",
     "alt": "img-quizz-app",
+    "projectType": "Web",
     "description": "App of questions of various categories.",
     "preview": "https://stackblitz.com/edit/react-scdye8?file=README.md",
     "repository": "https://github.com/francescoalterio/quiz-app",
@@ -63,6 +68,7 @@
     "name": "Francesco Pomodoro",
     "fileName": "francescopomodoro.png",
     "alt": "img-francescopomodoro",
+    "projectType": "Web",
     "description": "Clock pomodoro to increase the productivity of your study using React",
     "preview": "https://francescopomodoro.netlify.app/",
     "repository": "https://github.com/francescoalterio/pomodoro-timer",
@@ -74,6 +80,7 @@
     "name": "API Joke",
     "fileName": "api-joke.png",
     "alt": "img-api-joke",
+    "projectType": "Web",
     "description": "Consuming joke API with react.",
     "preview": "https://stackblitz.com/edit/react-e6wwrx?file=README.md",
     "repository": "https://github.com/francescoalterio/react-API-Joke",
@@ -85,6 +92,7 @@
     "name": "Study Panel",
     "fileName": "studypanel.png",
     "alt": "img-studypanel",
+    "projectType": "Web",
     "description": "Study panel for Web programming. It has a user system using Firebase and stores each of the technologies that you are learning and those learned.",
     "preview": "https://studypanel.vercel.app/",
     "repository": "https://github.com/francescoalterio/react-study-panel",
@@ -97,6 +105,7 @@
     "name": "Dualsend",
     "fileName": "dualsend.png",
     "alt": "img-dualsend",
+    "projectType": "Fullstack",
     "description": "Program that allows you to send files of any type between a PC and a mobile. You only need to start the server on the machine which has the core of the entire ecosystem, the app being the client with which to interact.",
     "preview": "",
     "repository": "https://github.com/francescoalterio/dualsend-mobileapp",
@@ -108,6 +117,7 @@
     "name": "Project Manager",
     "fileName": "project-manager.png",
     "alt": "img-project-manager",
+    "projectType": "Mobile",
     "description": "Manage and manage your projects and tasks in an easy and fast way. The app is the easiest and fastest way to manage your projects and tasks, from simple tasks to important tasks, speeding up your work and increasing your productivity. 1. Creation of projects 2. Task creation 3. Increased productivity 4. Acceleration of work 5. Daily organization 6. Detailed description of tasks and projects 7. Completion of projects and tasks.",
     "app": "https://play.google.com/store/apps/details?id=com.francescox5.projectmanager",
     "repository": "https://github.com/francescoalterio/project-manager",
@@ -119,6 +129,7 @@
     "name": "PokeBook",
     "fileName": "pokebook.png",
     "alt": "img-pokebook",
+    "projectType": "Mobile",
     "description": "The application has information on each existing Pokemon in all the games of the main saga. Pokedex: A pokedex has a source of accurate and detailed information on each of the pokemon and their abilities, all in one place. Features: PokeBook has a specific search section to easily find the pokemon or ability you want to search for! Have a pokemon filter using their types (Fire, Water, ...etc). The pokedex stores your last searches to avoid forgetting and easy access to previously found pokemon. - Skill Dex - Learn all the information about the skills - Look what pokemon has what abilities - You don't have to worry about forgetting the names of the skills, PokeBook will save it for you - Dex of Types - Filter pokemons by their types to learn more in depth.",
     "app": "https://play.google.com/store/apps/details?id=com.franstudios.pokebook",
     "repository": "https://github.com/francescoalterio/pokebook",
@@ -131,6 +142,7 @@
     "name": "IP Finder",
     "fileName": "ipfinder.png",
     "alt": "img-o",
+    "projectType": "Mobile",
     "description": "IP Finder app allows you to locate the IP location of any IP address.IP Finder allows you to locate and search any IP anywhere in the world for free. The app provides you with a lot of information about the located IP such as location, time zone, etc.",
     "app": "https://play.google.com/store/apps/details?id=com.franstudios.ipfinder",
     "repository": "https://github.com/francescoalterio/ip-finder",
@@ -142,6 +154,7 @@
     "name": "Fran Studios",
     "fileName": "fran-studios.png",
     "alt": "img-fran-studios",
+    "projectType": "Web",
     "description": "Fran Studios was born from the idea of creating a personal brand on mobile application development. Simple, pleasant apps that solve user problems directly, whether they are tools or entertainment.",
     "preview": "https://franstudios.vercel.app/",
     "repository": "https://github.com/francescoalterio/fran-studios",
@@ -153,6 +166,7 @@
     "name": "Cocktails Library",
     "fileName": "cocktails-library.png",
     "alt": "img-o",
+    "projectType": "Mobile",
     "description": "Cocktail Recipe App is a mobile application that helps you find cocktail recipes and drink recipes.",
     "app": "https://play.google.com/store/apps/details?id=com.franstudios.cocktaillibrary",
     "repository": "https://github.com/francescoalterio/cocktails-app",
@@ -164,6 +178,7 @@
     "name": "Login APP",
     "fileName": "login-api.png",
     "alt": "img-loginapi",
+    "projectType": "Fullstack",
     "description": "Login APP is my first backend project with Typescript, it is a study project where I learned to use a relational database such as SQLite and an ORM as prism, I also wanted to improve my knowledge in typescript. The app is based on a simple login/register with a home where you can create and delete posts, the curious thing about the app is that it has a session cookie so you don't have to log in every time you enter the app.",
     "preview": "",
     "repository": "https://github.com/francescoalterio/login-api-express-typescript",
@@ -175,6 +190,7 @@
     "name": "Fran Editor",
     "fileName": "franeditor.png",
     "alt": "img-franeditor",
+    "projectType": "Web",
     "description": "Fran Editor is a Javascript code editor on a web. The code is executed every time a change is made without the need to save and each console.log is reflected in a console on the right side of the editor. The app is built with Monaco Editor, the same editor that VS Code uses",
     "preview": "https://franeditor.vercel.app/",
     "repository": "https://github.com/francescoalterio/fran-editor",
@@ -186,6 +202,7 @@
     "name": "Fran Calculator PY",
     "fileName": "fran-calculator.png",
     "alt": "img-fran-calculator",
+    "projectType": "Desktop",
     "description": "Calculator developed with Python and Tkinter.",
     "preview": "",
     "repository": "https://github.com/francescoalterio/fran-calculator-python",
@@ -197,6 +214,7 @@
     "name": "Fran Testing Library",
     "fileName": "fran-testing-library.png",
     "alt": "img-fran-testing-library",
+    "projectType": "Library",
     "description": "Mini test library inspired by jest.",
     "preview": "https://www.npmjs.com/package/fran-testing-library?activeTab=readme",
     "repository": "https://github.com/francescoalterio/fran-testing-library",
@@ -208,6 +226,7 @@
     "name": "Gym Timer",
     "fileName": "gym-timer.png",
     "alt": "img-gymtimer",
+    "projectType": "Web",
     "description": "Timers for exercise, both simple and supersets.",
     "preview": "https://fran-gym-timer.netlify.app/",
     "repository": "https://github.com/francescoalterio/gym-timer",
@@ -219,6 +238,7 @@
     "name": "Login Form Simulation",
     "fileName": "login-form-simulation-php.png",
     "alt": "img-login-simulation-php",
+    "projectType": "Fullstack",
     "description": "Simulation of login with PHP and MySQL.",
     "preview": "https://francescoalteriog.000webhostapp.com/login-form-simulation",
     "repository": "https://github.com/francescoalterio/login-form-simulation-php",
@@ -230,6 +250,7 @@
     "name": "PHP Calculator",
     "fileName": "php-calculator.png",
     "alt": "img-php-calculator",
+    "projectType": "Web",
     "description": "Calculator created only with PHP.",
     "preview": "https://francescoalteriog.000webhostapp.com/calculator-php/",
     "repository": "https://github.com/francescoalterio/calculator-php",
@@ -241,6 +262,7 @@
     "name": "Task list CRUD PHP",
     "fileName": "crud-php.png",
     "alt": "img-crud-php",
+    "projectType": "Fullstack",
     "description": "Basic Task List, create, complete, edit and delete tasks.",
     "preview": "https://francescoalteriog.000webhostapp.com/crud-php/",
     "repository": "https://github.com/francescoalterio/CRUD-PHP",
@@ -252,6 +274,7 @@
     "name": "Users API",
     "fileName": "users-api-laravel.png",
     "alt": "img-users-api-laravel",
+    "projectType": "API",
     "description": "Random Users API built with Laravel. Perfect for testing any frontend.",
     "preview": "https://users-api.fly.dev/",
     "repository": "https://github.com/francescoalterio/users-api-php",
@@ -263,6 +286,7 @@
     "name": "Skywind",
     "fileName": "skywind.png",
     "alt": "img-skywind",
+    "projectType": "Framework",
     "description": "Skywind makes it easy to create web pages with Server Side Rendering and Javascript. Its simplicity and low dependencies allow it to be run on any node server. Skywind allows you to granulate your pages into small components that can be reused anywhere on your website.It has a very intuitive, powerful and easy to learn routing system, it also allows you to create APIs using node's HTTP module.",
     "preview": "https://www.npmjs.com/package/skywind",
     "repository": "https://github.com/francescoalterio/skywind",
@@ -274,6 +298,7 @@
     "name": "Snake Game",
     "fileName": "snakegame.png",
     "alt": "img-snakegame",
+    "projectType": "Web",
     "description": "Classic snake game using object-oriented programming in Typescript.",
     "preview": "https://francescoalterio.github.io/snake-game-compiled/",
     "repository": "https://github.com/francescoalterio/snake-game",
@@ -285,6 +310,7 @@
     "name": "Project Manager Vue",
     "fileName": "project-manager-vue.png",
     "alt": "img-project-manager-vue",
+    "projectType": "Web",
     "description": "CRUD project manager with Vue.js",
     "preview": "https://fran-project-manager.vercel.app/",
     "repository": "https://github.com/francescoalterio/web-project-manager",
@@ -296,6 +322,7 @@
     "name": "E-commerce App",
     "fileName": "ecommerceapp.png",
     "alt": "img-ecommerceapp",
+    "projectType": "Mobile",
     "description": "E-commerce app backed by Firebase and Typescript programmed.",
     "preview": "",
     "repository": "https://github.com/francescoalterio/e-commerce-app",
