--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.2",
     "@astrojs/tailwind": "^3.1.1",
-    "astro": "^2.1.3",
+    "astro": "^2.1.7",
     "astro-icon": "^0.8.0",
+    "sharp": "^0.31.3",
     "tailwindcss": "^3.2.7"
   }
 }
