--- a/package.json
+++ b/package.json
@@ -11,10 +11,18 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.16.2",
+    "@astrojs/react": "^2.1.0",
     "@astrojs/tailwind": "^3.1.1",
+    "@types/react": "^18.0.31",
+    "@types/react-dom": "^18.0.11",
     "astro": "^2.1.7",
     "astro-icon": "^0.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
     "tailwindcss": "^3.2.7"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.11"
   }
 }
