add new project card design and responsive

--- a/db/projects.json
+++ b/db/projects.json
@@ -510,7 +510,7 @@
       }
     ],
     "technologies": ["Javascript", "Node.js"],
-    "isFavorite": true
+    "isFavorite": false
   },
   {
     "id": 25,
