--- a/db/projects.json
+++ b/db/projects.json
@@ -5,7 +5,7 @@
     "fileName": "smitefilter.png",
     "alt": "img-smitefilter",
     "projectType": "Web",
-    "description": "Filter of gods for the video game Smite using Javscript vanilla",
+    "description": "Website based on the video game Smite Battleground of the gods where you can filter the selectable characters in the game by letters or role. ",
     "preview": [
       {
         "name": "Preview",
@@ -27,7 +27,7 @@
     "fileName": "react-calculator.png",
     "alt": "img-react-calculator",
     "projectType": "Web",
-    "description": "Calculator developed with React.",
+    "description": "From my first projects using React, a simple calculator with basic operations and a minimalist interface, using only React and Tailwindcss.",
     "preview": [
       { "name": "Preview", "url": "https://react-calculator-fran.netlify.app" }
     ],
@@ -46,7 +46,7 @@
     "fileName": "crypto-list.png",
     "alt": "img-crypto-list",
     "projectType": "Web",
-    "description": "List of the most famous cryptocurrencies and their prices.",
+    "description": "Web project based on a list of the most famous cryptocurrencies. This project was build on top of the CryptoCompare API using React.",
     "preview": [
       {
         "name": "Preview",
@@ -68,7 +68,7 @@
     "fileName": "money-converter.png",
     "alt": "img-money-converter",
     "projectType": "Web",
-    "description": "Converter from one currency to another.",
+    "description": "Web to convert the value of one currency to another. The main goal of the project was to improve the use of APIs using React.",
     "preview": [
       {
         "name": "Preview",
@@ -81,7 +81,7 @@
         "url": "https://github.com/francescoalterio/money-converter"
       }
     ],
-    "technologies": ["Javascript", "React.js, CSS"],
+    "technologies": ["Javascript", "React.js", "CSS"],
     "isFavorite": false
   },
   {
@@ -90,7 +90,7 @@
     "fileName": "quizz-app.png",
     "alt": "img-quizz-app",
     "projectType": "Web",
-    "description": "App of questions of various categories.",
+    "description": "Web game based on a Quizz, is to answer questions with several options where only one is correct and at the end know our final score.",
     "preview": [
       {
         "name": "Preview",
@@ -112,7 +112,7 @@
     "fileName": "francescopomodoro.png",
     "alt": "img-francescopomodoro",
     "projectType": "Web",
-    "description": "Clock pomodoro to increase the productivity of your study using React",
+    "description": "La técnica Pomodoro es un método para mejorar la administración del tiempo dedicado a una actividad. Fue creado por Francesco Cirillo a fines de la década de 1980.",
     "preview": [
       { "name": "Preview", "url": "https://francescopomodoro.netlify.app/" }
     ],
@@ -131,7 +131,7 @@
     "fileName": "api-joke.png",
     "alt": "img-api-joke",
     "projectType": "Web",
-    "description": "Consuming joke API with react.",
+    "description": "Web project based on a joke API, The main goal of the project was to improve the use of APIs using React and Javascript.",
     "preview": [
       {
         "name": "Preview",
@@ -296,7 +296,7 @@
     "fileName": "cocktails-library.png",
     "alt": "img-o",
     "projectType": "Mobile",
-    "description": "Cocktail Recipe App is a mobile application that helps you find cocktail recipes and drink recipes.",
+    "description": "Cocktail Recipe App es una aplicación móvil que te ayuda a encontrar recetas de cócteles y recetas de bebidas. Esta aplicación está disponible para dispositivos Android. La aplicación ofrece una amplia gama de recetas de cócteles con la ayuda de las últimas tendencias en bebidas. Estos incluyen tanto cócteles clásicos como nuevos. La aplicación tiene una función de búsqueda que le permite encontrar las bebidas que se adapten a su gusto. Puede guardar sus bebidas favoritas para que pueda acceder a ellas fácilmente cuando sea necesario sin tener que buscar. La aplicación tiene una interfaz simple y limpia. Tiene una barra de búsqueda en la parte superior para encontrar tu bebida favorita. Las bebidas se clasifican por sus ingredientes, el tipo de bebida y el contenido de alcohol. También presenta recetas de bebidas de algunos de los cantineros más reconocidos del mundo, así como muchas otras que seguramente complacerán a cualquiera que disfrute de los cócteles. Esta aplicación es una forma nueva y maravillosa de encontrar rápidamente bebidas perfectas para cualquier ocasión. Es extremadamente fácil de usar. Simplemente escriba algunas palabras clave que describan lo que está buscando. La aplicación de recetas de cócteles es la aplicación perfecta para las personas que aman beber. Es imprescindible para cualquiera que ame beber cócteles y quiera explorar nuevas bebidas. Tiene una enorme base de datos de recetas de cócteles, por lo que nunca te quedarás sin opciones.",
     "preview": [
       {
         "name": "View app",
@@ -358,7 +358,7 @@
     "fileName": "fran-calculator.png",
     "alt": "img-fran-calculator",
     "projectType": "Desktop",
-    "description": "Calculator developed with Python and Tkinter.",
+    "description": "When I started studying Python I wanted to create my first project and I decided to create a simple calculator created with the TKinter library.",
     "preview": [],
     "repository": [
       {
@@ -375,7 +375,7 @@
     "fileName": "fran-testing-library.png",
     "alt": "img-fran-testing-library",
     "projectType": "Library",
-    "description": "Mini test library inspired by jest.",
+    "description": "When studying something new I love to know a little bit about how the technologies work and I decided to create a very small testing library with Node.js.",
     "preview": [
       {
         "name": "Preview",
@@ -397,7 +397,7 @@
     "fileName": "gym-timer.png",
     "alt": "img-gymtimer",
     "projectType": "Web",
-    "description": "Timers for exercise, both simple and supersets.",
+    "description": "Web timer for exercise, with which you can establish simple routines and much more complex with the series nesting system.",
     "preview": [
       { "name": "Preview", "url": "https://fran-gym-timer.netlify.app/" }
     ],
@@ -416,7 +416,7 @@
     "fileName": "login-form-simulation-php.png",
     "alt": "img-login-simulation-php",
     "projectType": "Fullstack",
-    "description": "Simulation of login with PHP and MySQL.",
+    "description": "My first project using PHP and MySQL, is based on a simple but effective login system with a simple and quite minimalist interface.",
     "preview": [
       {
         "name": "Preview",
@@ -438,7 +438,7 @@
     "fileName": "php-calculator.png",
     "alt": "img-php-calculator",
     "projectType": "Web",
-    "description": "Calculator created only with PHP.",
+    "description": "Being new to a language I love to make a simple calculator, in order to familiarize myself with the language in the most popular way.",
     "preview": [
       {
         "name": "Preview",
@@ -460,7 +460,7 @@
     "fileName": "crud-php.png",
     "alt": "img-crud-php",
     "projectType": "Fullstack",
-    "description": "Basic Task List, create, complete, edit and delete tasks.",
+    "description": "Basic task list created with PHP, MySQL and Bootstrap that aimed to improve CRUD skills using the PHP language.",
     "preview": [
       {
         "name": "Preview",
@@ -482,7 +482,7 @@
     "fileName": "users-api-laravel.png",
     "alt": "img-users-api-laravel",
     "projectType": "API",
-    "description": "Random Users API built with Laravel. Perfect for testing any frontend.",
+    "description": "Public Web API built with Laravel PHP, it is based on a random user API for rapid application development or testing much like JSON Placeholder.",
     "preview": [{ "name": "Preview", "url": "https://users-api.fly.dev/" }],
     "repository": [
       {
@@ -518,7 +518,7 @@
     "fileName": "snakegame.png",
     "alt": "img-snakegame",
     "projectType": "Web",
-    "description": "Classic snake game using object-oriented programming in Typescript.",
+    "description": "Classic snake game programmed using Object Oriented Programming, Typescript and pure CSS for a more Vanilla experience.",
     "preview": [
       {
         "name": "Preview",
@@ -540,7 +540,7 @@
     "fileName": "project-manager-vue.png",
     "alt": "img-project-manager-vue",
     "projectType": "Web",
-    "description": "CRUD project manager with Vue.js",
+    "description": "Simple task list and first project using Vue.js. Created with the goal of learning new frameworks and libraries and improve skills like Firebase and Tailwindcss. ",
     "preview": [
       { "name": "Preview", "url": "https://fran-project-manager.vercel.app/" }
     ],
@@ -559,7 +559,7 @@
     "fileName": "ecommerceapp.png",
     "alt": "img-ecommerceapp",
     "projectType": "Mobile",
-    "description": "E-commerce app backed by Firebase and Typescript programmed.",
+    "description": "Fully functional E-commerce app using Typescript and Firebase. Minimalist design and easy to use. Perfect and ready to use for your online store.",
     "preview": [],
     "repository": [
       {
