--- a/db/projects.json
+++ b/db/projects.json
@@ -403,7 +403,7 @@
     "preview": [
       {
         "name": "Preview",
-        "url": "https://francescoalterio.github.io/snake-game-compiled/"
+        "url": "https://fran-snake-game.netlify.app/"
       }
     ],
     "repository": [
