--- a/db/projects.json
+++ b/db/projects.json
@@ -394,5 +394,24 @@
     ],
     "technologies": ["Typescript", "Node.js"],
     "isFavorite": true
+  },
+  {
+    "id": 19,
+    "name": "Word Counter",
+    "fileName": "wordcounter.png",
+    "alt": "img-wordcounter",
+    "projectType": "Web",
+    "description": "Word, character, paragraph and sentence counter for any text.",
+    "preview": [
+      { "name": "Preview", "url": "https://fran-word-counter.vercel.app/" }
+    ],
+    "repository": [
+      {
+        "name": "Repository",
+        "url": "https://github.com/francescoalterio/word-counter"
+      }
+    ],
+    "technologies": ["Typescript", "Next.js", "Tailwindcss"],
+    "isFavorite": false
   }
 ]
